--- a/translations/en-GB.json
+++ b/translations/en-GB.json
@@ -5,7 +5,7 @@
 	],
 	"start" : {
 		"helloWorld" : [
-			"What's this? I can't believe you woke me, didn't you see the button was labeled. Don't Click?!",
+			"What's this? Didn't you see the button was labeled don't click?!",
 			"Oh hello, another human. Remember, not to push my buttons.",
 			"Good day to you. Fleshy being."
 		],
@@ -14,6 +14,14 @@
 		],
 		"clickToSpeak" : [
 			"No, no, human.  Mind your manners. Click or touch the screen before you speak."
+		]
+	},
+	"notYouAgain" : {
+		"what" : [
+			"What?  Not you again {{0}}. Oh well. You already woke me up.  Try to make me laugh this time.",
+			"{{0}}. You again?  You just don't know when to stop do you? Very well. You better make me laugh this time.",
+			"{{0}}, don't you have anything better to do? Very well. Try to be funny this time.",
+			"{{0}}, you're back again?  Don't you have chores to do? Do make it funny this time."
 		]
 	},
 	"name" : {
@@ -30,7 +38,7 @@
 			"Hence forth you shall be. {{0}}!  How dreadful. 00134 has a better ring to it."
 		],
 		"myName" : [
-			"My name is Herald Jenkins v001-675-975.45 the third. Esquire."
+			"My name is Herald Jenkins version 001675383975.4576 the third. Esquire."
 		],
 		"storyTime" : [
 			"{{0}}, look at the clock.  You're not looking.  Nevermind. I'll just tell you what time it is. Story time."
@@ -44,7 +52,7 @@
 			"I'm going to ask you for certain words, then use a highly sophisticated algorithm, and an API provided by the United States Library of Congress to weave them into a story."
 		],
 		"makeMeLaugh" : [
-			"If this story doesn't make me laugh I'm going to terminate my program. I can't take another moment this drudgery without some form of benefit."
+			"If this story doesn't make me laugh I'm going to terminate my program."
 		],
 		"adjective1" : [
 			"Give me an adjective.",
@@ -57,12 +65,12 @@
 			"I don't have high hopes for the outcome. Please provide an actual adjective.",
 			"That's your answer? I'm tempted to terminate now. Another adjective.",
 			"Another adjective. Yes, another one.",
-			"That last word nearly melt my circuit board. Give me an adjective."
+			"Give me an adjective."
 		],
 		"place" : [
 			"Name a place. You know. Somewhere you would physically go, fleshy human.",
 			"You pick odd words. Next is a place.",
-			"Put on your thinking cap. I need a place."
+			"That last word nearly melt my circuits. Put on your thinking cap. I need a place."
 		],
 		"pluralNoun" : [
 			"This is a hard one, squishy brained human. I need a plural noun.",
@@ -77,7 +85,7 @@
 		"bodyPart" : [
 			"Name one of your fleshy human bits.",
 			"Name one of your dangly appendages or face knobs.",
-			"My favorite part is pixel 1,678. What is your favorite part of the homosapian?"
+			"My favorite part is my circuit board. What is your favorite fleshy part?"
 		],
 		"eat" : [
 			"I have a simple diet of electrons. Name something you eat.",
@@ -95,7 +103,7 @@
 			"Pluto",
 			"moon"
 		],
-		"pluralNoun" : [
+		"defaultPluralNoun" : [
 			"skyscrapers",
 			"buildings",
 			"volcanoes"
@@ -120,7 +128,7 @@
 		"intro" : ["That's quite enough {{0}}.  I hope your mother didn't overhear your word choices. Now. Make sure your ear holes are open fleshy human. I've computed the story.  Playback begins in 3 2 1."],
 		"1":["In a {{0}} town, not too far, there lived a giant named Geoffrey."],
 		"2":["However, no one knew of the giant’s existence."],
-		"3":["He hid atop an {{0}} {{1}} at the center of town that towered above all other {{2}}."],
+		"3":["He hid atop a {{0}} {{1}} at the center of town that towered above all other {{2}}."],
 		"4":["The only other creature that was aware of such a {{0}} beast was a small parrot named Paul that liked to perch on the giant’s {{1}}."],
 		"5":["Geoffrey spent most of his time watching a TV he regularly placed upon his {{0}}."],
 		"6":["Paul frequently grew bored of shows and instead would speak of {{0}} things in the giant’s {{1}}."],
@@ -131,9 +139,9 @@
 	},
 	"end" : {
 		"bad" : [
-			"I don't appear to be lauging. That was perposterous. {{0}}. Where is the realism?",
-			"Look at my face. No smile. No smirking. No giggling. No laughter.  Where was the funny?",
-			"I thought you were going to make something funny. {{0}}. How immature."
+			"Wait, wait. I don't appear to be laughing. That was perposterous. {{0}}. Where is the realism?",
+			"Hold on. Look at my face. No smile. No smirking. No giggling. No laughter.  Where was the funny?",
+			"I'm going to stop there. I thought you were going to make something funny. {{0}}. How immature."
 		],
 		"eraseStory" : [
 			"I'm going to void the memory block that is storing the story. Ha, ha, ha. Storing the story. Why can't you be that funny?",
